ecmascript/parser/tests/test262-error-references/fail/89ace2a47ff50b0d.module.js.stderr
error: Unexpected token `,`. Expected an identifier
 --> $DIR/tests/test262-parser/fail/89ace2a47ff50b0d.module.js:1:9
  |
1 | import {,} from 'a';
  |         ^

